# artdetectors

./: .gitignore  pyproject.toml
src/artdetectors/: __init__.py  app.py  clip_style.py  pipeline.py
